APT-1868 fix cropped splash screen

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -717,7 +717,9 @@ button,
 }
 
 @supports (-webkit-touch-callout: none) {
-  .fix-mobile-height {
-    height: -webkit-fill-available;
+  @media (max-width: 450px) {
+    .fix-mobile-height {
+      height: -webkit-fill-available;
+    }
   }
 }
